# kibitzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: AUDIT.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/components/advice/: AdvicePanel.tsx  ThoughtProcess.tsx
frontend/src/components/auction/: AuctionComplete.tsx  AuctionGrid.tsx  AuctionHistory.tsx  BidAnalysisCard.tsx  BidControls.tsx  BidPreview.tsx  SeatAnalysisCard.tsx
frontend/src/components/glossary/: Glossary.tsx
frontend/src/components/hand/: CardRow.tsx  HandDisplay.tsx  HandEntryForm.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/scoring/: RubberSummary.tsx  ScoreEntry.tsx  Scoresheet.tsx  ScoringSheet.tsx
frontend/src/components/session/: JoinPanel.tsx  SessionControls.tsx  SessionHeader.tsx
frontend/src/components/ui/: BidText.tsx  SeatPicker.tsx  VulnPicker.tsx  button.tsx  card.tsx  input.tsx
frontend/src/hooks/: useBidKeyboard.ts
frontend/src/lib/: bridge.ts  constants.ts  glossary.ts  handDescription.ts
frontend/src/pages/: Analyzer.tsx  Lobby.tsx  Login.tsx  Practice.tsx  Register.tsx
planning/: PLAN.md  deploy.md  multiplayer.md  phase0-foundation.md  phase1-cli-interface.md  phase1-domain-model.md  phase2-web-app.md  phase3-rule-engine.md  phase4-opening-bids.md  phase5-responses.md  phase6-opener-rebids.md  phase7-complete-suit-pipeline.md  reresponses.md  step3-practice-mode.md
planning/completed/: new_suit_reresponse_audit.md  new_suit_reresponse_plan.md  phase-b1-1nt-responses.md  phase0-project-setup.md  phase7-complete-suit-pipeline.md
research/: 00-overview.md  01-opening-bids.md  02-responses.md  03-rebids.md  04-competitive.md  05-conventions.md  06-slam.md  07-sayc-gaps.md  08-rubber-scoring.md
src/bridge/: logging_config.py
src/bridge/api/: config.py  db.py  deps.py  main.py
src/bridge/api/analyze/: router.py  schemas.py
src/bridge/cli/: app.py  display.py
src/bridge/engine/: __init__.py  bidutil.py  condition.py  context.py  hand_description.py  query.py  registry.py  rule.py  sayc.py  selector.py
src/bridge/evaluate/: __init__.py  hand_eval.py
src/bridge/model/: __init__.py  auction.py  bid.py  board.py  card.py  hand.py
src/bridge/scoring/: calculator.py  rubber.py
src/bridge/service/: __init__.py  advisor.py  deal.py  lobby.py  models.py  table.py
tests/: conftest.py
tests/api/: test_auth.py  test_practice.py  test_practice_session.py
tests/cli/: test_app.py  test_display.py
tests/engine/: test_condition.py  test_context.py  test_hand_description.py  test_query.py  test_registry.py  test_sayc.py  test_selector.py
tests/evaluate/: test_hand_eval.py
tests/model/: test_auction.py  test_bid.py  test_card.py  test_contract.py  test_hand.py  test_parse_auction.py
tests/scoring/: test_calculator.py  test_rubber.py
tests/service/: test_advisor.py  test_deal.py  test_lobby.py  test_table.py
(+58 files in other folders)
